--- a/Accordion/style.css
+++ b/Accordion/style.css
@@ -3,14 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+main{
     background-color: #1c1c1c;
+    width: 100%;
+    height: 100vh;
 }
 .container{
-    width: 600px;
+    width: 50%;
     position: absolute;
-    top: 130px;
-    left: 400px;
+    top: 150px;
+    left: 50%;
+    transform: translateX(-50%);
     color: white;
     font-family: 'Quicksand', sans-serif;
 }
@@ -47,12 +50,15 @@ i{
     opacity: .8;   
     padding-bottom: 8px;
 }
-.color{
-    color: tomato !important;
-    font-size: 50px !important;
-}
 .active{
-    /* transform: rotate3d(1, 0, 0, 180deg); */
     transform: rotate(180deg);
     margin-top: 15px; 
+}
+.d-block{
+    display: block;
+}
+@media screen and (max-width: 720px){
+    .container{
+        width: 80%;
+    }
 }
