--- a/rock-paper-scissors/style.css
+++ b/rock-paper-scissors/style.css
@@ -58,3 +58,25 @@ main{
 .choses-bar button:hover{
     background: #2d8372;
 }
+
+@media screen and (max-width: 982px) {
+    main{
+        width: 80%;
+    }
+    header{
+        width: 80%;
+    }
+}
+@media screen and (max-width: 648px) {
+    main{
+        width: 100%;
+    }
+    .container img{
+        width: 170px;
+    }
+}
+@media screen and (max-width: 416px) {
+    .container img{
+        width: 140px;
+    }
+} 
